# KIV-VSS-Covid19-Simulation

./: CMakeLists.txt  README.md  imgui.ini
misc/: README.md
misc/measured_data/20/: 02_00.json  02_03.json  02_04.json
misc/measured_data/40/: 04_02.json  04_03.json
misc/measured_data/60/: 06_00.json  06_02.json  06_03.json  06_04.json
misc/measured_data/80/: 08_01.json  08_02.json  08_04.json
misc/measured_data/immunity/01/: 01_01.json  01_02.json  01_03.json  01_04.json  01_05.json
misc/measured_data/immunity/14/: 14_01.json  14_02.json  14_03.json  14_04.json  14_05.json
misc/measured_data/immunity/28/: 28_01.json  28_02.json  28_03.json  28_04.json  28_05.json
misc/measured_data/immunity/42/: 42_01.json  42_02.json  42_03.json  42_04.json  42_05.json
misc/measured_data/popular_locations/1250/: 1250_00.json  1250_01.json  1250_02.json  1250_03.json  1250_04.json
misc/measured_data/popular_locations/1500/: 1500_00.json  1500_01.json  1500_02.json  1500_03.json  1500_04.json
misc/measured_data/popular_locations/1750/: 1750_00.json  1750_01.json  1750_02.json  1750_03.json  1750_04.json
misc/measured_data/popular_locations/2000/: 2000_00.json  2000_01.json  2000_02.json  2000_03.json  2000_04.json
misc/measured_data/self_isolation/20/: 02_01.json  02_02.json
misc/measured_data/self_isolation/40/: 04_00.json  04_01.json  04_04.json
misc/measured_data/self_isolation/60/: 06_01.json
misc/measured_data/self_isolation/80/: 08_00.json  08_03.json
misc/scripts/: dead_chart.py  immunity.py  infected_chart.py  popular_locations.py
src/: CMakeLists.txt  main.cpp
src/gui/: gui.cpp  gui.h  gui_window.cpp  gui_window.h  plots_window.cpp  plots_window.h  settings.cpp  settings.h  settings_window.cpp  settings_window.h  simulation.cpp  simulation.h  simulation_window.cpp  simulation_window.h  statistics_window.cpp  statistics_window.h
src/simulation/: config.h  infection_manager.cpp  infection_manager.h  infection_model.cpp  infection_model.h  location.cpp  location.h  mobility_manager.cpp  mobility_manager.h  mobility_model.cpp  mobility_model.h  person.cpp  person.h  person_mobility.cpp  person_mobility.h  simulation.cpp  simulation.h  simulator.cpp  simulator.h  singleton.h  utils.cpp  utils.h
src/utils/: json_exporter.cpp  json_exporter.h  singleton.h  statistics.cpp  statistics.h
